# team-closed-ai

./: .gitignore  README.md  docker-compose.aws.yaml  docker-compose.ollama.yml  docker-compose.yaml
genai/: .coveragerc  .env.aws  .env.example  Dockerfile  README.md  docker-compose.yml  ollama-setup.sh  openapi.yaml  pyproject.toml  pytest.ini  requirements.txt
genai/app/: main.py
genai/app/chain/: answering.py  classification.py  context_builder.py  generation.py
genai/app/classifier/: classification.py
genai/app/llm_services/: categorization_service.py
genai/app/metrics/: metrics.py
genai/app/models/: base.py  intent.py
genai/app/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  openapi_client_README.md  rest.py
genai/app/pgai_vec/: vectorizers.py
genai/app/retriever/: pgvector.py
genai/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
genai/openapi_client/.openapi-generator/: FILES
genai/openapi_client/api/: project_api.py  user_api.py
genai/openapi_client/docs/: AddTaskDto.md  CreateProjectDto.md  CreateUserDto.md  ProjectApi.md  ProjectDto.md  TaskApi.md  TaskDto.md  TaskStatus.md  UserApi.md  UserDto.md
genai/openapi_client/models/: __init__.py  add_task_dto.py  task_dto.py  task_status.py  (+1 more)
genai/pgai/: init_pgai.py  vectorizers.py
genai/pgai_vec/: init_pgai.py  vectorizers.py
genai/recommender-service/: Dockerfile  pyproject.toml
genai/server_api/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
genai/tests/: .env.test  README.md  conftest.py  test_answering.py  test_classification.py  test_context_builder.py  test_generation.py  test_init_pgai.py  test_integration.py  test_main.py  test_models.py
(+373 files in other folders)
