[project]
name = "genai"
version = "0.1.0"
description = ""
authors = [
    {name = "Dominik Remo",email = "47261058+DominikRemo@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)"
]

[tool.poetry]
packages = [{include = "genai", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
