[project]
name = "genai"
version = "0.1.0"
description = "GenAI service for new task recommendations and answering questions on existing projects."
authors = [
    {name = "Dominik Remo",email = "47261058+DominikRemo@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "server-api @ ./server_api"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
