[project]
name = "recommender-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Dominik Remo",email = "47261058+DominikRemo@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)"
]

[tool.poetry]
packages = [{include = "recommender_service", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
